--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,16 +7,26 @@ a {
   color: #00B7FF;
 }
 #mapid { 
-  width: 600px;
+  width: 800px;
   height: 600px; 
 }
 
 .leaflet-control-custom {
-  background-color: white;
   width: 30px;
   height: 30px;
 }
 
-.leaflet-control-custom:hover {
-  background-color: #ccc;
+.writeOff {
+  background-color: white;
+}
+
+.writeOff:hover {
+  background-color: #f4f4f4;
+}
+
+.writeOn {
+  background-color: yellow;
+}
+.writeOn:hover {
+  background-color: gold;
 }
