--- a/views/index.pug
+++ b/views/index.pug
@@ -2,12 +2,8 @@ extends layout
 
 block content
   #mapid
-  button#btn-mode.leaflet-control-custom.writeOff(type='submit') M
+  button#btn-mode.leaflet-control-custom.writeOff(type='submit') R
   .form-input
-      input#field_marker_name.form(type='text', placeholder='Введите название' name='field_marker_name')
-      input#field_marker_description.form(type='text', placeholder='Введите описание' name='field_marker_description')
-      button#btn-save(type='submit') Сохранить
-      button#btn-close(type='submit') Закрыть
 
   script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
   script(src='https://unpkg.com/leaflet@1.0.3/dist/leaflet.js', integrity="sha512-A7vV8IFfih/D732iSSKi20u/ooOfj/AGehOKq0f4vLT1Zr2Y+RX7C+w8A1gaSasGtRUZpF/NZgzSAu4/Gc41Lg==", crossorigin="")
